sim 13 run complete

--- a/Test/error_handling_sims.ipynb
+++ b/Test/error_handling_sims.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "73426bc2",
    "metadata": {},
    "outputs": [
@@ -136,17 +136,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading 10 files...\n",
-      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 12_summary_1.csv has the expected number of rows: 100000.\n"
+      "Reading 10 files...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_6391/1256659879.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(file, names=columns)\n",
-      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_6391/1256659879.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_56463/1087272226.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(file, names=columns)\n"
      ]
     },
@@ -154,17 +151,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 12_summary_2.csv has the expected number of rows: 100000.\n",
-      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 12_summary_3.csv has the expected number of rows: 100000.\n"
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 13_summary_1.csv has the expected number of rows: 100000.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_6391/1256659879.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(file, names=columns)\n",
-      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_6391/1256659879.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_56463/1087272226.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(file, names=columns)\n"
      ]
     },
@@ -172,16 +166,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 12_summary_4.csv has the expected number of rows: 100000.\n"
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 13_summary_2.csv has the expected number of rows: 100000.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_6391/1256659879.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(file, names=columns)\n",
-      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_6391/1256659879.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_56463/1087272226.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(file, names=columns)\n"
      ]
     },
@@ -189,17 +181,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 12_summary_5.csv has the expected number of rows: 100000.\n",
-      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 12_summary_6.csv has the expected number of rows: 100000.\n"
+      "Warning: /Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 13_summary_3.csv has 100001 rows, expected 100000.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_6391/1256659879.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(file, names=columns)\n",
-      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_6391/1256659879.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_56463/1087272226.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(file, names=columns)\n"
      ]
     },
@@ -207,19 +196,91 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 12_summary_7.csv has the expected number of rows: 100000.\n",
-      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 12_summary_8.csv has the expected number of rows: 100000.\n",
-      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 12_summary_9.csv has the expected number of rows: 100000.\n",
-      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 12_summary_10.csv has the expected number of rows: 100000.\n"
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 13_summary_4.csv has the expected number of rows: 100000.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_6391/1256659879.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(file, names=columns)\n",
-      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_6391/1256659879.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_56463/1087272226.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file, names=columns)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 13_summary_5.csv has the expected number of rows: 100000.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_56463/1087272226.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file, names=columns)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 13_summary_6.csv has the expected number of rows: 100000.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_56463/1087272226.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file, names=columns)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: /Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 13_summary_7.csv has 100002 rows, expected 100000.\n",
+      "Missing models in /Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 13_summary_7.csv: {('0.07027', '360.0')}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_56463/1087272226.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file, names=columns)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 13_summary_8.csv has the expected number of rows: 100000.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_56463/1087272226.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file, names=columns)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 13_summary_9.csv has the expected number of rows: 100000.\n",
+      "/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/Sim 13_summary_10.csv has the expected number of rows: 100000.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/tm/964hg0yn70x0ddsqcj4bsf8r0000gn/T/ipykernel_56463/1087272226.py:26: DtypeWarning: Columns (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(file, names=columns)\n"
      ]
     }
@@ -228,7 +289,7 @@
     "from itertools import product\n",
     "\n",
     "base_path = '/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/Test/'\n",
-    "sim_version = 'Sim 12'\n",
+    "sim_version = 'Sim 13'\n",
     "\n",
     "m = [round(x, 5) for x in np.linspace(0.001, 0.1, 1000)]\n",
     "n = [round(x, 5) for x in np.linspace(0, 360, 1000)]\n",
@@ -729,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "eb896055",
    "metadata": {},
    "outputs": [],
