combined_csv.ipynb for simulations

--- a/Simulations/Output/combined_csv.ipynb
+++ b/Simulations/Output/combined_csv.ipynb
@@ -2,14 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "686125f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9bb3962",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded Sim 1_summary_1.csv with shape (1001000, 16)\n",
+      "Loaded Sim 1_summary_2.csv with shape (100000, 16)\n",
+      "Loaded Sim 1_summary_3.csv with shape (100000, 16)\n",
+      "Loaded Sim 1_summary_4.csv with shape (100000, 16)\n",
+      "Loaded Sim 1_summary_5.csv with shape (100000, 16)\n",
+      "Loaded Sim 1_summary_6.csv with shape (100000, 16)\n",
+      "Loaded Sim 1_summary_7.csv with shape (100000, 16)\n",
+      "Loaded Sim 1_summary_8.csv with shape (100000, 16)\n",
+      "Loaded Sim 1_summary_9.csv with shape (100000, 16)\n",
+      "Loaded Sim 1_summary_10.csv with shape (100000, 16)\n"
+     ]
+    }
+   ],
+   "source": [
+    "SIM_NAME = 'Sim 1'\n",
+    "NUM_FILES = 10\n",
+    "\n",
+    "def load_and_combine_simulation_data(sim_name, num_files):\n",
+    "    # Rename the first file to match the format\n",
+    "    first_file_name = f\"{sim_name}_summary.csv\"\n",
+    "    new_first_file_name = f\"{sim_name}_summary_1.csv\"\n",
+    "    if os.path.exists(first_file_name):\n",
+    "        os.rename(first_file_name, new_first_file_name)\n",
+    "\n",
+    "    combined_data = pd.DataFrame()\n",
+    "    for i in range(num_files):\n",
+    "        file_name = f\"{sim_name}_summary_{i + 1}.csv\"\n",
+    "        data = pd.read_csv(file_name, header=0)\n",
+    "        print(f\"Loaded {file_name} with shape {data.shape}\")\n",
+    "        combined_data = pd.concat([combined_data, data], ignore_index=True)\n",
+    "    \n",
+    "    combined_data.to_csv(f\"{sim_name}.csv\", index=False)\n",
+    "    return combined_data\n",
+    "\n",
+    "combined_df = load_and_combine_simulation_data(SIM_NAME, NUM_FILES)\n"
    ]
   }
  ],
