--- a/Simulations/testing_for_sim.ipynb
+++ b/Simulations/testing_for_sim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "7d428ccb",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "id": "6a2f334d",
    "metadata": {},
    "outputs": [],
@@ -540,6 +540,290 @@
    ],
    "source": [
     "pos_rms, mag_rms, dfs, chi2 = rms_extract(model_name, '/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/SIE+SHEAR/', constraint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "acc8fb10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = 'NFW'\n",
+    "model_output_dir = '/Volumes/T7 Shield/Simulations/Output/'\n",
+    "temp_input_py_file = '/Volumes/T7 Shield/Simulations/Input/input.py'\n",
+    "m_val = 0.5\n",
+    "n_val = 0.3\n",
+    "o_val = 0.7\n",
+    "obs_point_file = '/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/obs_point/obs_point_(POS+FLUX).dat' \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5ce4dd0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rms_extract(model_ver, model_path, temp_input_py_file):\n",
+    "    global pos_rms, mag_rms, chi2_value\n",
+    "    \n",
+    "    opt_result_file = os.path.join(model_path, f'{model_ver}_optresult.dat')\n",
+    "    \n",
+    "    with open(opt_result_file, 'r') as file:\n",
+    "        opt_result = file.readlines()\n",
+    "\n",
+    "    last_optimize_index = None\n",
+    "    for idx in range(len(opt_result) - 1, -1, -1):\n",
+    "        if 'optimize' in opt_result[idx]:\n",
+    "            last_optimize_index = idx\n",
+    "            break\n",
+    "    if last_optimize_index is None:\n",
+    "        raise ValueError(\"No line with 'optimize' found in the file.\")\n",
+    "\n",
+    "    opt_result = opt_result[last_optimize_index + 1:]\n",
+    "\n",
+    "    lens_params_dict = {}\n",
+    "    lens_params = []\n",
+    "    for line in opt_result:\n",
+    "        if line.startswith('lens'):\n",
+    "            parts = re.split(r'\\s+', line.strip())\n",
+    "            lens_name = parts[1]\n",
+    "            params = [float(x) for x in parts[2:]]\n",
+    "            lens_params_dict[lens_name] = params\n",
+    "            lens_params.append((lens_name, params))\n",
+    "    if lens_params:\n",
+    "        for i in range(len(lens_params)):\n",
+    "            lens_name, params = lens_params[i]\n",
+    "            lens_params_dict[lens_name] = params[1:]\n",
+    "\n",
+    "    source_params = []\n",
+    "    for line in opt_result:\n",
+    "        if line.startswith('point'):\n",
+    "            parts = re.split(r'\\s+', line.strip())\n",
+    "            params = [float(x) for x in parts[1:]]\n",
+    "            source_params.append(params)\n",
+    "    \n",
+    "    chi2_line = next((line for line in opt_result if 'chi^2' in line), None)\n",
+    "    if chi2_line is None:\n",
+    "        raise ValueError(\"No line with 'chi2' found in the file.\")\n",
+    "    chi2_value = float(chi2_line.split('=')[-1].strip().split()[0])\n",
+    "    num_lens_profiles = len(lens_params_dict)\n",
+    "\n",
+    "    df = pd.DataFrame()\n",
+    "    rows = []\n",
+    "    max_param_len = 0\n",
+    "    for lens_name, params in lens_params_dict.items():\n",
+    "        row = {'Lens Name': lens_name}\n",
+    "        for i, val in enumerate(params): row[f'param{i+1}'] = val\n",
+    "        rows.append(row)\n",
+    "        if len(params) > max_param_len: max_param_len = len(params)\n",
+    "    columns = ['Lens Name'] + [f'param{i+1}' for i in range(max_param_len)]\n",
+    "    df = pd.DataFrame(rows, columns=columns)\n",
+    "\n",
+    "    with open(temp_input_py_file, 'r') as file:\n",
+    "        py = file.readlines()\n",
+    "\n",
+    "    set_lens_lines = [line for line in py if line.startswith('glafic.set_lens(')]\n",
+    "    if not set_lens_lines: raise ValueError(\"No lines starting with 'glafic.set_lens(' found in the file.\")\n",
+    "    set_lens_params = []\n",
+    "    for line in set_lens_lines:\n",
+    "        match = re.search(r'set_lens\\((.*?)\\)', line)\n",
+    "        if match:\n",
+    "            params_str = match.group(1)\n",
+    "            params = [param.strip() for param in params_str.split(',')]\n",
+    "            set_lens_params.append(params)\n",
+    "        else: raise ValueError(f\"No valid parameters found in line: {line.strip()}\")\n",
+    "\n",
+    "    set_lens_dict = {}\n",
+    "    for params in set_lens_params:\n",
+    "        if len(params) < 3: raise ValueError(f\"Not enough parameters found in line: {params}\")\n",
+    "        lens_name = params[1].strip(\"'\\\"\")\n",
+    "        lens_params = [float(x) for x in params[2:]]\n",
+    "        set_lens_dict[lens_name] = lens_params\n",
+    "    if set_lens_dict:\n",
+    "        for lens_name, params in set_lens_dict.items():\n",
+    "            set_lens_dict[lens_name] = params[1:]\n",
+    "\n",
+    "    df_input = pd.DataFrame()\n",
+    "    rows_input = []\n",
+    "    max_param_len_input = 0\n",
+    "    for lens_name, params in set_lens_dict.items():\n",
+    "        row = {'Lens Name': lens_name}\n",
+    "        for i, val in enumerate(params): row[f'param{i+1}'] = val\n",
+    "        rows_input.append(row)\n",
+    "        if len(params) > max_param_len_input: max_param_len_input = len(params)\n",
+    "    columns_input = ['Lens Name'] + [f'param{i+1}' for i in range(max_param_len_input)]\n",
+    "    df_input = pd.DataFrame(rows_input, columns=columns_input)\n",
+    "    \n",
+    "    set_flag_lines = [line for line in py if line.startswith('glafic.setopt_lens(')]\n",
+    "    if not set_flag_lines: raise ValueError(\"No lines starting with 'glafic.setopt_lens(' found in the file.\")\n",
+    "    set_flag_params = []\n",
+    "    for line in set_flag_lines:\n",
+    "        match = re.search(r'setopt_lens\\((.*?)\\)', line)\n",
+    "        if match:\n",
+    "            params_str = match.group(1)\n",
+    "            params = [param.strip() for param in params_str.split(',')]\n",
+    "            set_flag_params.append(params)\n",
+    "        else: raise ValueError(f\"No valid parameters found in line: {line.strip()}\")\n",
+    "    \n",
+    "    set_flag_dict = {}\n",
+    "    for params in set_flag_params:\n",
+    "        if len(params) < 2: raise ValueError(f\"Not enough parameters found in line: {params}\")\n",
+    "        lens_index = params[0].strip(\"'\\\"\")\n",
+    "        lens_name = None\n",
+    "        for lens_params in set_lens_params:\n",
+    "            if lens_params[0].strip(\"'\\\"\") == lens_index:\n",
+    "                lens_name = lens_params[1].strip(\"'\\\"\")\n",
+    "                break\n",
+    "        if lens_name is None: raise ValueError(f\"Lens name for index {lens_index} not found\")\n",
+    "        flag = ','.join(params[1:])\n",
+    "        set_flag_dict[lens_name] = flag\n",
+    "    if set_flag_dict:\n",
+    "        for lens_name, flag in set_flag_dict.items():\n",
+    "            flag_parts = flag.split(',')\n",
+    "            set_flag_dict[lens_name] = ','.join(flag_parts[1:])\n",
+    "    \n",
+    "    df_flag = pd.DataFrame()\n",
+    "    rows_flag = []\n",
+    "    max_flag_len = 0\n",
+    "    for flag in set_flag_dict.values():\n",
+    "        flag_parts = flag.split(',')\n",
+    "        if len(flag_parts) > max_flag_len: max_flag_len = len(flag_parts)\n",
+    "    for lens_name, flag in set_flag_dict.items():\n",
+    "        flag_parts = flag.split(',')\n",
+    "        row = {'Lens Name': lens_name}\n",
+    "        for i, val in enumerate(flag_parts): row[f'flag{i+1}'] = val\n",
+    "        rows_flag.append(row)\n",
+    "    columns_flag = ['Lens Name'] + [f'flag{i+1}' for i in range(max_flag_len)]  \n",
+    "    df_flag = pd.DataFrame(rows_flag, columns=columns_flag)\n",
+    "    \n",
+    "    dfs = []\n",
+    "    for i in range(num_lens_profiles):\n",
+    "        lens_name = df['Lens Name'][i]\n",
+    "        model_type = None\n",
+    "        for m_model in model_list:\n",
+    "            if m_model.lower() == lens_name.lower():\n",
+    "                model_type = m_model\n",
+    "                break\n",
+    "        if model_type is None: continue\n",
+    "        symbols = model_params[model_type][:7]\n",
+    "        row_input = pd.DataFrame([df_input.iloc[i, 1:8].values], columns=symbols)\n",
+    "        row_output = pd.DataFrame([df.iloc[i, 1:8].values], columns=symbols)\n",
+    "        row_flags = pd.DataFrame([df_flag.iloc[i, 1:8].values], columns=symbols)\n",
+    "        lens_df = pd.concat([row_input.assign(Type='Input'), row_output.assign(Type='Output'), row_flags.assign(Type='Flag')], ignore_index=True)\n",
+    "        lens_df.insert(0, 'Lens Name', lens_name)\n",
+    "        cols = lens_df.columns.tolist()\n",
+    "        cols.insert(1, cols.pop(cols.index('Type')))\n",
+    "        lens_df = lens_df[cols]\n",
+    "        dfs.append(lens_df)\n",
+    "    \n",
+    "    columnn_names = ['x', 'y', 'mag', 'pos_err', 'mag_err', '1', '2', '3']\n",
+    "    obs_point = pd.read_csv(obs_point_file, sep='\\s+', header=None, skiprows=1, names=columnn_names)\n",
+    "    \n",
+    "    out_point_file = os.path.join(model_path, f'{model_ver}_point.dat')\n",
+    "    out_point = pd.read_csv(out_point_file, sep='\\s+', header=None, skiprows=1, names=columnn_names)\n",
+    "\n",
+    "    out_point.drop(columns=['mag_err', '1', '2', '3'], inplace=True)\n",
+    "    mask = abs(out_point['mag']) >= 1\n",
+    "    out_point = out_point[mask[:len(out_point)]].reset_index(drop=True)\n",
+    "    out_point['x_diff'] = abs(out_point['x'] - obs_point['x'])\n",
+    "    out_point['y_diff'] = abs(out_point['y'] - obs_point['y'])\n",
+    "    out_point['mag_diff'] = abs(abs(out_point['mag']) - abs(obs_point['mag']))\n",
+    "    out_point['pos_sq'] = np.sqrt((out_point['x_diff']**2 + out_point['y_diff']**2).astype(float))\n",
+    "    pos_rms = np.average(out_point['pos_sq'])\n",
+    "    mag_rms = np.average(np.sqrt((out_point['mag_diff']**2).astype(float)))\n",
+    "    return pos_rms, mag_rms, dfs, chi2_value, source_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "efcbbde1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_rms, mag_rms, dfs, chi2, source = rms_extract(model_name, model_output_dir, temp_input_py_file)\n",
+    "if pos_rms == -1: raise IOError(\"rms_extract failed.\")\n",
+    "\n",
+    "num_images = 0\n",
+    "out_point_file = os.path.join(model_output_dir, f'{model_name}_point.dat')\n",
+    "if os.path.exists(out_point_file):\n",
+    "    with open(out_point_file, 'r') as f: num_images = sum(1 for line in f if line.strip()) - 1\n",
+    "    \n",
+    "result_dict = {\n",
+    "    'm': m_val, 'n': n_val, 'o': o_val, \n",
+    "    'num_images': num_images, 'pos_rms': pos_rms, \n",
+    "    'mag_rms': mag_rms, 'chi2': chi2\n",
+    "}\n",
+    "\n",
+    "num_lenses = model_name.count('_') - 2\n",
+    "macro_model_params = model_name.strip().split('_')[0]\n",
+    "if macro_model_params == 'NFW': \n",
+    "    macro_model_params = 'ANFW'\n",
+    "macro_columns = model_params[macro_model_params]\n",
+    "\n",
+    "if num_lenses > 1:\n",
+    "    for i in range(1, num_lenses):\n",
+    "        micro_model_params = model_name.strip().split('_')[i]\n",
+    "        if micro_model_params == 'SHEAR': micro_model_params = 'PERT'\n",
+    "        micro_columns = model_params[micro_model_params]\n",
+    "        micro_columns = [f'{col}_{i}' for col in micro_columns]\n",
+    "\n",
+    "macro_cols = list(dict.fromkeys(macro_columns[:7])) if isinstance(macro_columns, list) else [macro_columns]\n",
+    "if num_lenses > 1:\n",
+    "    micro_cols = list(dict.fromkeys(micro_columns[:7])) if isinstance(micro_columns, list) else [micro_columns]\n",
+    "\n",
+    "def _safe_get(dfs_idx, col):\n",
+    "    if len(dfs) > dfs_idx and col in dfs[dfs_idx].columns:\n",
+    "        return dfs[dfs_idx][col].iloc[1]\n",
+    "    return 0\n",
+    "\n",
+    "for col in macro_cols: result_dict[col] = _safe_get(0, col)\n",
+    "if num_lenses > 1:\n",
+    "    for len_num in range(1, num_lenses):\n",
+    "        for col in micro_cols:\n",
+    "            stripped_col = col.strip(f'_{len_num}')\n",
+    "            result_dict[col] = _safe_get(1, stripped_col)\n",
+    "\n",
+    "result_dict['source_x'] = source[0][1] if source and len(source) > 0 else 0\n",
+    "result_dict['source_y'] = source[0][2] if source and len(source) > 0 else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d936dec3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'m': 0.5,\n",
+       " 'n': 0.3,\n",
+       " 'o': 0.7,\n",
+       " 'num_images': 5,\n",
+       " 'pos_rms': 0.5206431707220018,\n",
+       " 'mag_rms': 18.6125,\n",
+       " 'chi2': 108000.1,\n",
+       " 'M': 1877439000000.0,\n",
+       " 'x': 20.86964,\n",
+       " 'y': 20.94406,\n",
+       " 'e': 0.107,\n",
+       " '$θ_{e}$': 23.38,\n",
+       " 'c or $r_{s}$': 20.0,\n",
+       " 'NaN': 0.0,\n",
+       " 'source_x': 20.86232,\n",
+       " 'source_y': 20.94153}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_dict"
    ]
   }
  ],
