pow fixed model run

--- a/Simulations/pow_fixed_model.ipynb
+++ b/Simulations/pow_fixed_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "id": "803ecad2",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "id": "736e95f3",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
          "type": "float"
         }
        ],
-       "ref": "3c068509-6c84-4eff-a12a-b09e99f429a6",
+       "ref": "e8928b2b-b1fa-4dfd-9dfc-4eb229d48d35",
        "rows": [
         [
          "0",
@@ -1369,7 +1369,7 @@
        "[1000000 rows x 16 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3130,7 +3130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "id": "8f80a7ec",
    "metadata": {},
    "outputs": [
@@ -3138,8 +3138,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MoviePy - Building video Sim 2_kde_pos_rms_vs_$\\gamma$ (PWI)_animation.mov.\n",
-      "MoviePy - Writing video Sim 2_kde_pos_rms_vs_$\\gamma$ (PWI)_animation.mov\n",
+      "MoviePy - Building video Sim 2_kde_source_y_vs_$\\gamma$ (PWI)_animation.mov.\n",
+      "MoviePy - Writing video Sim 2_kde_source_y_vs_$\\gamma$ (PWI)_animation.mov\n",
       "\n"
      ]
     },
@@ -3155,8 +3155,8 @@
      "output_type": "stream",
      "text": [
       "MoviePy - Done !\n",
-      "MoviePy - video ready Sim 2_kde_pos_rms_vs_$\\gamma$ (PWI)_animation.mov\n",
-      "Video saved as Sim 2_kde_pos_rms_vs_$\\gamma$ (PWI)_animation.mov\n"
+      "MoviePy - video ready Sim 2_kde_source_y_vs_$\\gamma$ (PWI)_animation.mov\n",
+      "Video saved as Sim 2_kde_source_y_vs_$\\gamma$ (PWI)_animation.mov\n"
      ]
     }
    ],
@@ -3165,7 +3165,7 @@
     "variable_to_animate = '$\\gamma$ (PWI)'\n",
     "\n",
     "# Select the variable to plot the KDE for\n",
-    "variable_to_plot = 'pos_rms' # e.g., 'pos_rms', 'mag_rms', 'chi2'\n",
+    "variable_to_plot = 'source_y' # e.g., 'pos_rms', 'mag_rms', 'chi2'\n",
     "\n",
     "# --- The rest of the code is now general ---\n",
     "\n",
@@ -3197,8 +3197,8 @@
     "    plt.title(f'KDE of {variable_to_plot} for {variable_to_animate} = {value:.2f}')\n",
     "    plt.xlabel(variable_to_plot)\n",
     "    plt.ylabel('Density')\n",
-    "    plt.xlim(plot_var_min, plot_var_max) # Keep x-axis consistent\n",
-    "    plt.ylim(0, 4.0) # Let y-axis adjust automatically\n",
+    "    plt.xlim(20.5, 21.2) # Keep x-axis consistent\n",
+    "    # plt.ylim(0, 4.0) # Let y-axis adjust automatically\n",
     "    plt.grid(True, alpha=0.2)\n",
     "    plt.tight_layout()\n",
     "\n",
