nfw_fixed_model plot run

--- a/Simulations/nfw_fixed_model.ipynb
+++ b/Simulations/nfw_fixed_model.ipynb
@@ -2850,10 +2850,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "4b3f83a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 100 unique values of 'e' to animate.\n",
+      "Generating frames...\n",
+      "Generated 100 frames.\n",
+      "MoviePy - Building video Sim 3_chi2_vs_e_$θ_{e}$_c or $r_{s}$_over_e.mp4.\n",
+      "MoviePy - Writing video Sim 3_chi2_vs_e_$θ_{e}$_c or $r_{s}$_over_e.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                      \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done !\n",
+      "MoviePy - video ready Sim 3_chi2_vs_e_$θ_{e}$_c or $r_{s}$_over_e.mp4\n",
+      "\n",
+      "Video saved as Sim 3_chi2_vs_e_$θ_{e}$_c or $r_{s}$_over_e.mp4\n"
+     ]
+    }
+   ],
    "source": [
     "x_variable = 'e'\n",
     "y_variable = '$θ_{e}$'\n",
@@ -2948,6 +2978,215 @@
     "    shutil.rmtree(frames_dir)\n",
     "else:\n",
     "    print(\"No frames were generated, so no video was created.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d62494a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Building video Sim 3_chi2_vs_e_$θ_{e}$_over_c or $r_{s}$_animation.mov.\n",
+      "MoviePy - Writing video Sim 3_chi2_vs_e_$θ_{e}$_over_c or $r_{s}$_animation.mov\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                      \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done !\n",
+      "MoviePy - video ready Sim 3_chi2_vs_e_$θ_{e}$_over_c or $r_{s}$_animation.mov\n",
+      "Video saved as Sim 3_chi2_vs_e_$θ_{e}$_over_c or $r_{s}$_animation.mov\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Configuration ---\n",
+    "# Select the variables for the animation\n",
+    "variable_to_animate = 'c or $r_{s}$' # Column to iterate over for each frame\n",
+    "x_variable = 'e'                  # Column for the x-axis\n",
+    "y_variable = '$θ_{e}$'             # Column for the y-axis\n",
+    "z_variable = 'chi2'            # Column for the color value (z-axis)\n",
+    "# --- End of Configuration ---\n",
+    "\n",
+    "\n",
+    "# --- The rest of the code is now general ---\n",
+    "\n",
+    "# Create a directory to store the frames, named after the chosen variables\n",
+    "frames_dir = f'frames_contour_{z_variable}_vs_{x_variable}_{y_variable}_over_{variable_to_animate}'\n",
+    "if os.path.exists(frames_dir):\n",
+    "    shutil.rmtree(frames_dir) # Clean up previous frames\n",
+    "os.makedirs(frames_dir)\n",
+    "\n",
+    "frame_files = []\n",
+    "values_to_iterate = sorted(data[variable_to_animate].unique())\n",
+    "\n",
+    "# Determine the global range for the z-variable to keep the color bar consistent\n",
+    "z_min = data[z_variable].min()\n",
+    "z_max = data[z_variable].max()\n",
+    "\n",
+    "for i, value in enumerate(values_to_iterate):\n",
+    "    data_subset = data[data[variable_to_animate] == value]\n",
+    "\n",
+    "    # Skip if there's not enough data to create a grid\n",
+    "    if data_subset.shape[0] < 4:\n",
+    "        continue\n",
+    "\n",
+    "    # Create a grid of x and y values\n",
+    "    x = data_subset[x_variable].values\n",
+    "    y = data_subset[y_variable].values\n",
+    "    z = data_subset[z_variable].values\n",
+    "\n",
+    "    # Remove NaN values from the data\n",
+    "    mask = ~np.isnan(x) & ~np.isnan(y) & ~np.isnan(z)\n",
+    "    x, y, z = x[mask], y[mask], z[mask]\n",
+    "    \n",
+    "    # Skip if not enough valid data points for interpolation\n",
+    "    if len(x) < 4:\n",
+    "        continue\n",
+    "\n",
+    "    # Create interpolation grid\n",
+    "    xi = np.linspace(x.min(), x.max(), 100)\n",
+    "    yi = np.linspace(y.min(), y.max(), 100)\n",
+    "    xi, yi = np.meshgrid(xi, yi)\n",
+    "\n",
+    "    # Interpolate z values on regular grid\n",
+    "    zi = griddata((x, y), z, (xi, yi), method='cubic')\n",
+    "\n",
+    "    # Create the plot\n",
+    "    plt.figure(figsize=(12, 8))\n",
+    "    contour = plt.contourf(xi, yi, zi, levels=100, cmap='rainbow', vmin=z_min, vmax=z_max)\n",
+    "    plt.colorbar(contour, label=z_variable)\n",
+    "    \n",
+    "    # Set labels and title dynamically\n",
+    "    plt.xlabel(x_variable)\n",
+    "    plt.ylabel(y_variable)\n",
+    "    plt.title(f'{z_variable} vs. {x_variable} and {y_variable} for {variable_to_animate} = {value:.2f}')\n",
+    "    plt.grid(True, alpha=0.2)\n",
+    "    plt.tight_layout()\n",
+    "\n",
+    "    # Save the frame\n",
+    "    frame_path = os.path.join(frames_dir, f\"frame_{i:04d}.png\")\n",
+    "    plt.savefig(frame_path)\n",
+    "    plt.close()  # Close the plot to free memory\n",
+    "    frame_files.append(frame_path)\n",
+    "\n",
+    "# Create the video from the frames\n",
+    "if frame_files:\n",
+    "    clip = mp.ImageSequenceClip(frame_files, fps=10) # Adjusted fps for better viewing\n",
+    "    video_filename = f'{SIM_NAME}_{z_variable}_vs_{x_variable}_{y_variable}_over_{variable_to_animate}_animation.mov'\n",
+    "    clip.write_videofile(video_filename, codec='libx264')\n",
+    "    print(f\"Video saved as {video_filename}\")\n",
+    "\n",
+    "    # Clean up the frames directory\n",
+    "    shutil.rmtree(frames_dir)\n",
+    "else:\n",
+    "    print(\"No frames were generated to create a video.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "0d92df32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Building video Sim 3_kde_pos_rms_vs_e_animation.mov.\n",
+      "MoviePy - Writing video Sim 3_kde_pos_rms_vs_e_animation.mov\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                      \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done !\n",
+      "MoviePy - video ready Sim 3_kde_pos_rms_vs_e_animation.mov\n",
+      "Video saved as Sim 3_kde_pos_rms_vs_e_animation.mov\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select the variable to iterate over for the animation\n",
+    "variable_to_animate = 'e'\n",
+    "\n",
+    "# Select the variable to plot the KDE for\n",
+    "variable_to_plot = 'pos_rms' # e.g., 'pos_rms', 'mag_rms', 'chi2'\n",
+    "\n",
+    "# --- The rest of the code is now general ---\n",
+    "\n",
+    "# Create a directory to store the frames, named after the chosen variables\n",
+    "frames_dir = f'frames_kde_{variable_to_plot}_vs_{variable_to_animate}'\n",
+    "if os.path.exists(frames_dir):\n",
+    "    shutil.rmtree(frames_dir) # Clean up previous frames\n",
+    "os.makedirs(frames_dir)\n",
+    "\n",
+    "frame_files = []\n",
+    "values = sorted(data[variable_to_animate].unique())\n",
+    "\n",
+    "# Determine the global range for the plotted variable to keep the x-axis consistent\n",
+    "plot_var_min = 0\n",
+    "plot_var_max = 1\n",
+    "\n",
+    "for i, value in enumerate(values):\n",
+    "    # Filter data for the current value of the chosen animation variable\n",
+    "    data_subset = data[data[variable_to_animate] == value]\n",
+    "\n",
+    "    # Skip if there's not enough data\n",
+    "    if data_subset.empty:\n",
+    "        continue\n",
+    "\n",
+    "    plt.figure(figsize=(8, 4))\n",
+    "    sns.kdeplot(data_subset[variable_to_plot], fill=True)\n",
+    "    \n",
+    "    # Set labels and a dynamic title\n",
+    "    plt.title(f'KDE of {variable_to_plot} for {variable_to_animate} = {value:.2f}')\n",
+    "    plt.xlabel(variable_to_plot)\n",
+    "    plt.ylabel('Density')\n",
+    "    plt.xlim(0, 1) # Keep x-axis consistent\n",
+    "    plt.ylim(0, 5.0) # Let y-axis adjust automatically\n",
+    "    plt.grid(True, alpha=0.2)\n",
+    "    plt.tight_layout()\n",
+    "\n",
+    "    # Save the frame\n",
+    "    frame_path = os.path.join(frames_dir, f\"frame_{i:04d}.png\")\n",
+    "    plt.savefig(frame_path)\n",
+    "    plt.close()  # Close the plot to free memory\n",
+    "    frame_files.append(frame_path)\n",
+    "\n",
+    "# Create the video from the frames\n",
+    "if frame_files:\n",
+    "    clip = mp.ImageSequenceClip(frame_files, fps=10) # Slower fps for better viewing\n",
+    "    video_filename = f'{SIM_NAME}_kde_{variable_to_plot}_vs_{variable_to_animate}_animation.mov'\n",
+    "    clip.write_videofile(video_filename, codec='libx264')\n",
+    "    print(f\"Video saved as {video_filename}\")\n",
+    "\n",
+    "    # Clean up the frames directory\n",
+    "    shutil.rmtree(frames_dir)\n",
+    "else:\n",
+    "    print(\"No frames were generated to create a video.\")"
    ]
   }
  ],
